--- a/GloveClasses/GloveClasses.csproj
+++ b/GloveClasses/GloveClasses.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GloveInterfaces\GloveInterfaces.csproj" />
+  </ItemGroup>
+
 </Project>
