Bosquejo inicial de los formularios

--- a/GloveForms/GloveForms.csproj
+++ b/GloveForms/GloveForms.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PatientSignUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatientSignUp.Designer.cs">
+      <DependentUpon>PatientSignUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatientSignUp.resx">
+      <DependentUpon>PatientSignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GloveBackground.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GlovePlay.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
