Subiendo imagenes a la Pantalla Principal

--- a/GloveForms/GloveForms.csproj
+++ b/GloveForms/GloveForms.csproj
@@ -68,18 +68,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -93,7 +93,25 @@
     <None Include="Resources\GloveBackground.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\GlovePlay.png" />
+    <None Include="Resources\GameTitle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PlayButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SignUpButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OptionsButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CreditsButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RightMenuHolder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LeftMenuHolder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
