--- a/GloveForms/GloveForms.csproj
+++ b/GloveForms/GloveForms.csproj
@@ -93,27 +93,6 @@
     <None Include="Resources\GloveBackground.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\GameTitle.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\PlayButton.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SignUpButton.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\OptionsButton.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\CreditsButton.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\RightMenuHolder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\LeftMenuHolder.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\PatientSignUp.png" />
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +130,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\SaveRecordButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MainScreenBackground.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
