--- a/GloveForms/GloveForms.csproj
+++ b/GloveForms/GloveForms.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GloveClasses\GloveClasses.csproj" />
+    <ProjectReference Include="..\GloveQueries\GloveQueries.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
