--- a/GloveForms/GloveForms.csproj
+++ b/GloveForms/GloveForms.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ScottPlot.WinForms" Version="4.1.61" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GloveClasses\GloveClasses.csproj" />
     <ProjectReference Include="..\GloveQueries\GloveQueries.csproj" />
   </ItemGroup>
